--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -157,20 +157,27 @@
                                                         <constraint firstAttribute="height" constant="25" id="L7r-dd-CtJ"/>
                                                     </constraints>
                                                 </imageView>
+                                                <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pd6-H5-s3V">
+                                                    <rect key="frame" x="20" y="194" width="160" height="2"/>
+                                                </progressView>
                                             </subviews>
                                         </view>
                                         <constraints>
                                             <constraint firstItem="c1l-Si-Ev2" firstAttribute="leading" secondItem="D97-62-ZGG" secondAttribute="leading" id="ERE-uh-qTw"/>
+                                            <constraint firstItem="pd6-H5-s3V" firstAttribute="leading" secondItem="D97-62-ZGG" secondAttribute="leadingMargin" constant="4" id="Eyf-Sg-dTx"/>
                                             <constraint firstAttribute="bottom" secondItem="c1l-Si-Ev2" secondAttribute="bottom" id="Wjv-mZ-MI0"/>
                                             <constraint firstItem="c1l-Si-Ev2" firstAttribute="leading" secondItem="eoa-8v-O5r" secondAttribute="trailing" constant="-31" id="Xpc-i2-9WQ"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="eoa-8v-O5r" secondAttribute="bottom" constant="-2" id="Ywi-Gr-72f"/>
+                                            <constraint firstItem="pd6-H5-s3V" firstAttribute="centerX" secondItem="c1l-Si-Ev2" secondAttribute="centerX" id="cpa-Yi-9x9"/>
                                             <constraint firstAttribute="trailing" secondItem="c1l-Si-Ev2" secondAttribute="trailing" id="lnW-yN-xLE"/>
                                             <constraint firstItem="eoa-8v-O5r" firstAttribute="leading" secondItem="D97-62-ZGG" secondAttribute="leadingMargin" constant="-2" id="oV3-sg-TAn"/>
                                             <constraint firstItem="eoa-8v-O5r" firstAttribute="top" secondItem="c1l-Si-Ev2" secondAttribute="bottom" constant="-31" id="qyq-sP-PyT"/>
+                                            <constraint firstItem="pd6-H5-s3V" firstAttribute="top" secondItem="eoa-8v-O5r" secondAttribute="bottom" id="ykk-jS-a0V"/>
                                             <constraint firstItem="c1l-Si-Ev2" firstAttribute="top" secondItem="D97-62-ZGG" secondAttribute="top" id="zLI-gN-q7d"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="c1l-Si-Ev2" id="7PR-0f-yaE"/>
+                                            <outlet property="progressBar" destination="pd6-H5-s3V" id="mdr-9m-1u7"/>
                                             <outlet property="tickImageView" destination="eoa-8v-O5r" id="yem-gO-39H"/>
                                         </connections>
                                     </collectionViewCell>
@@ -204,7 +211,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHQ-hF-oqD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-71" y="400"/>
+            <point key="canvasLocation" x="-71.200000000000003" y="399.85007496251876"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NKt-nu-Xay">
