--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -241,16 +241,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzQ-UB-VBU">
-                                <rect key="frame" x="157.5" y="538" width="60" height="60"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzQ-UB-VBU">
+                                <rect key="frame" x="145.5" y="514" width="84" height="84"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JzQ-UB-VBU" secondAttribute="height" multiplier="1:1" id="2e9-qL-muS"/>
-                                    <constraint firstAttribute="width" constant="60" id="Orc-cb-Gah"/>
+                                    <constraint firstAttribute="width" constant="84" id="Orc-cb-Gah"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="bty-LK-VT2"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="Start">
+                                <state key="normal" image="startButton">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -262,16 +260,14 @@
                                     <action selector="startButton:" destination="Al3-9I-E9z" eventType="touchUpInside" id="GBc-EN-3Id"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZGW-55-Lus">
-                                <rect key="frame" x="285.5" y="538" width="60" height="60"/>
-                                <color key="backgroundColor" red="1" green="0.21106947949999999" blue="0.1665672708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZGW-55-Lus">
+                                <rect key="frame" x="275" y="514" width="84" height="84"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ZGW-55-Lus" secondAttribute="height" multiplier="1:1" id="ciE-EA-c4u"/>
-                                    <constraint firstAttribute="height" constant="60" id="ckg-ME-qaA"/>
-                                    <constraint firstAttribute="width" constant="60" id="obW-oO-i3s"/>
+                                    <constraint firstAttribute="height" constant="84" id="ckg-ME-qaA"/>
+                                    <constraint firstAttribute="width" constant="84" id="obW-oO-i3s"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="End">
+                                <state key="normal" image="endButton">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -287,7 +283,7 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="JzQ-UB-VBU" firstAttribute="centerX" secondItem="2kP-oq-oms" secondAttribute="centerX" id="BZa-DY-ga3"/>
-                            <constraint firstItem="ZGW-55-Lus" firstAttribute="leading" secondItem="JzQ-UB-VBU" secondAttribute="trailing" constant="68" id="SC7-Mu-a4r"/>
+                            <constraint firstItem="ZGW-55-Lus" firstAttribute="leading" secondItem="JzQ-UB-VBU" secondAttribute="trailing" constant="45.5" id="SC7-Mu-a4r"/>
                             <constraint firstItem="k8c-TV-nCY" firstAttribute="bottom" secondItem="JzQ-UB-VBU" secondAttribute="bottom" constant="20" id="fH2-Nt-xqA"/>
                             <constraint firstItem="k8c-TV-nCY" firstAttribute="bottom" secondItem="ZGW-55-Lus" secondAttribute="bottom" constant="20" id="kfF-CD-I2E"/>
                         </constraints>
@@ -365,9 +361,11 @@
     <resources>
         <image name="cameraTab" width="30" height="30"/>
         <image name="checkBubble" width="30" height="30"/>
+        <image name="endButton" width="333.66665649414062" height="333.33334350585938"/>
         <image name="galleryTab" width="30" height="30"/>
         <image name="helpTab" width="30" height="30"/>
         <image name="settingsTab" width="30" height="30"/>
+        <image name="startButton" width="333.66665649414062" height="333.33334350585938"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="JzF-IY-gsQ"/>
